Media queries for smaller screens has been set

--- a/about.html
+++ b/about.html
@@ -19,10 +19,10 @@
 </head>
 <body>
     <nav class="navbar-menu navbar-expand-lg navbar-light bg-light font" id="home">
-        <img src="assets/images/logo.png" alt="logo for the company" width="30">
-        <a class="navbar-brand ml-3" href="index.html">
+        <img id="logo-top" src="assets/images/logo.png" alt="logo for the company" width="30">
+        <a class="navbar-brand ml-3" href="#home">
             <h1 id="header-title">HP<sub id="red-subscript" class="subsize">2</sub>g Ltd</h1>
-            <h6>Commercial Heating Plumbing <span id="red-subscript">and</span> Gas Services</h6>
+            <h6 id="subheading">Commercial Heating Plumbing <span id="red-subscript">and</span> Gas Services</h6>
         </a>
         <div class="navbar-toggle large-toggle">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,11 +31,11 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-            </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#about">About Us <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#services">Our Services</a>
@@ -57,9 +57,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6 header-nav pt-3 pb-3 pl-4 font">
-                <button>Contact Us</button>
+                <button class="pl-2 pr-2 pt-2 pb-2 contact"><i class="fa-solid fa-envelope"></i> CONTACT US</button>
             </div>
-            <div class="col-6 header-nav pt-3 font header-right big-contact">
+            <div class="col-6 header-nav pt-4 font header-right big-contact">
                 <p class="text-light" id="email">
                     <a href="mailto:info@hp2g.co.uk" class="text-light"><i class="fa-solid fa-envelope"></i> info@hp2g.co.uk</a>
                     <i class="fa-solid fa-phone pl-3"></i> 01234 376855
@@ -85,21 +85,28 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 mt-2">
-                <h3 class="pr-3 mt-2 font">What We Do</h3>
+            <div class="col-md-6 col-sm-12 mt-2">
+                <h3 class="pr-3 mt-2 font font-header">What We Do</h3>
+                <hr/>
             </div>
-            <div class="col-6 display-right mt-2 pr-5">
+            <div class="col-md-6 small-about-none display-right mt-2 pr-5">
                     <img src="assets/images/safecontractor.png" width="60" class="pr-2">
                     <img src="assets/images/gassafe.png" width="90" class="pr-2">
                     <img src="assets/images/wras.jpg" width="80">
                     <img src="assets/images/dbs.jpg" width="80">
             </div>
-            <div class="col-8">
-                <p>Primarily we are a maintenance company, we maintain commercial gas appliances such as boilers, high level gas fired heaters, also plumbing and water systems and commercial gas pipework systems providing specific written reporting detailing appliance condition and remedial works that may be required.  But we also provide the essential support to each client of a call out service, should the boilers break down or the heating system develop a fault we are available to attend, and fault find until the issue is rectified.</p>
-                <p>All our clients have plumbing and hot water systems, we monitor the functionality of our clients’ systems to ensure that they are functioning correctly this might include checking TMV3 blender valves used to blend hot water temperatures down to a safe level for handwashing purposes also ensuring that cold water is being stored correctly and that the temperatures are correct as the water issues from the tap.</p>
-                <p>Commercial gas testing is a specialist field, not many engineers have the qualifications required to work on the largest gas installations, but our engineers do, we’re able to investigate any gas issue to any size which some of our clients find very useful as each year we can carry out a full gas tightness test of the whole site or investigate suspected gas leaks without the need to subcontract work to unknown contractors.</p>
+            <div class="col-md-8 col-sm-12">
+                <p class="font-text">Primarily we are a maintenance company, we maintain commercial gas appliances such as boilers, high level gas fired heaters, also plumbing and water systems and commercial gas pipework systems providing specific written reporting detailing appliance condition and remedial works that may be required.  But we also provide the essential support to each client of a call out service, should the boilers break down or the heating system develop a fault we are available to attend, and fault find until the issue is rectified.</p>
+                <p class="font-text">All our clients have plumbing and hot water systems, we monitor the functionality of our clients’ systems to ensure that they are functioning correctly this might include checking TMV3 blender valves used to blend hot water temperatures down to a safe level for handwashing purposes also ensuring that cold water is being stored correctly and that the temperatures are correct as the water issues from the tap.</p>
+                <p class="font-text">Commercial gas testing is a specialist field, not many engineers have the qualifications required to work on the largest gas installations, but our engineers do, we’re able to investigate any gas issue to any size which some of our clients find very useful as each year we can carry out a full gas tightness test of the whole site or investigate suspected gas leaks without the need to subcontract work to unknown contractors.</p>
             </div>
-            <div class="col-4 center-video mt-4">
+            <div class="col-12 large-about-none text-center mt-2">
+                <img src="assets/images/safecontractor.png" width="60" class="pr-2">
+                <img src="assets/images/gassafe.png" width="90" class="pr-2">
+                <img src="assets/images/wras.jpg" width="80">
+                <img src="assets/images/dbs.jpg" width="80">
+        </div>
+            <div class="col-4 center-video mt-4 small-about-none">
                 <video width="300" height="400" controls>
                     <source src="assets/images/video1.mp4" type="video/mp4">
                     Your browser does not support the video tag.
@@ -112,19 +119,45 @@
             <div class="col-12 strip"></div>
         </div>
     </div>
-    <div class="container-fluid">  
-        <div class="row mt-2">
-            <div class="col-4 center-video mt-4">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 text-center large-about-none">
+                <h3 class="pr-3 mt-2 font font-header">Our Work</h3>
+                <hr/>
+            </div>
+            <div class="col-md-6 col-sm-12 center-video mt-4 large-about-none">
+                <video width="300" height="400" controls>
+                    <source src="assets/images/video1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="col-md-6 col-sm-12 center-video mt-4 large-about-none">
                 <video width="300" height="400" controls>
                     <source src="assets/images/video2.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
-            <div class="col-8 display-right">
-                <h3 class="pr-3 mt-2 font">A Tailored Bespoke Service</h3>
-                <p class="pt-2">We also carry out installation work which might include the fitting of replacement boilers, high level heaters, pumps and associated heating plant, water heaters, calorifiers, pipework and heat emitters such as radiators and fan convectors. </p>
-                <p>So, we offer a one stop, bespoke service to our clients for commercial gas appliance servicing, plumbing, heating, and gas issues along with a reactive call out service.  We develop a close working relationship with all our clients creating a deep understanding of the customers site over time to ensure that we’re able to locate and fix any issue quickly and efficiently.</p>
-                <p>As we work in education and healthcare establishments all of our engineers are enhanced DBS checked with many years’ experience working in such environments, we’re WRAS approved and are proud to be accredited with Safecontractor reassuring all of our clients that we have robust management systems in place to demonstrate that our paperwork is compliant with current legislation and that processes are in place to ensure health and safety is handled in the best way possible.</p>
+        </div>
+    </div>
+    <div class="container-fluid large-about-none">
+        <div class="row">
+            <div class="col-12 strip"></div>
+        </div>
+    </div>
+    <div class="container-fluid">  
+        <div class="row mt-2">
+            <div class="col-4 center-video mt-4 small-about-none">
+                <video width="300" height="400" controls>
+                    <source src="assets/images/video2.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="col-md-8 col-sm-12 display-right">
+                <h3 class="pr-3 mt-2 font font-header">A Tailored Bespoke Service</h3>
+                <hr/>
+                <p class="pt-2 font-text">We also carry out installation work which might include the fitting of replacement boilers, high level heaters, pumps and associated heating plant, water heaters, calorifiers, pipework and heat emitters such as radiators and fan convectors. </p>
+                <p class="font-text">So, we offer a one stop, bespoke service to our clients for commercial gas appliance servicing, plumbing, heating, and gas issues along with a reactive call out service.  We develop a close working relationship with all our clients creating a deep understanding of the customers site over time to ensure that we’re able to locate and fix any issue quickly and efficiently.</p>
+                <p class="font-text">As we work in education and healthcare establishments all of our engineers are enhanced DBS checked with many years’ experience working in such environments, we’re WRAS approved and are proud to be accredited with Safecontractor reassuring all of our clients that we have robust management systems in place to demonstrate that our paperwork is compliant with current legislation and that processes are in place to ensure health and safety is handled in the best way possible.</p>
             </div>
         </div>
     </div>
@@ -136,20 +169,20 @@
     <div class="container-fluid" id="services">
         <div class="row">
             <div class="col-12 center-text">
-                <h3 class="font pt-3 pb-2">Our Services</h3>
-                <p class="text-center">We offer a variety of different services, for more information on these services please contact us.</p>
+                <h3 class="font pt-3 pb-2 font-header">Our Services</h3>
+                <p class="text-center font-text">We offer a variety of different services, for more information on these services please contact us.</p>
             </div>
-            <div class="col-4" id="service-one">
+            <div class="col-lg-4 col-md-6" id="service-one">
                 <h4 class="service">Gas Appliance Servicing & Inspection</h4>
-                <div class="pl-2" id="service-one-text">
+                <div class="pl-2 font-text" id="service-one-text">
                     <li>Annual Inspection and Written Weporting</li>
                     <li>Report on Condition</li>
                     <li>Proactive Suggestions to Promote Energy Efficiency</li>
                 </div>
             </div>
-            <div class="col-4" id="service-two">
+            <div class="col-lg-4 col-md-6" id="service-two">
                 <h4 class="service">Statutory Testing</h4>
-                <div class="pl-2" id="service-two-text">
+                <div class="pl-2 font-text" id="service-two-text">
                     <li>Gas Fired Boilers</li>
                     <li>Gas Fired Water Heaters</li>
                     <li>Unvented Hot Water Heaters</li>
@@ -158,38 +191,36 @@
                     <li>TMV3 Blender Valves</li>
                 </div>
             </div>
-            <div class="col-4" id="service-three">
+            <div class="col-lg-4 col-md-6" id="service-three">
                 <h4 class="service">Heating Systems</h4>
-                <div class="pl-2" id="service-three-text">
+                <div class="pl-2 font-text" id="service-three-text">
                     <li>Reactive Callouts</li>
                     <li>Fault Finding</li>
                     <li>System Extensions</li>
                     <li>System Design</li>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-4" id="service-four">
+            <div class="col-lg-4 col-md-6" id="service-four">
                 <h4 class="service">Plumbing Sytems</h4>
-                <div class="pl-2" id="service-four-text">
+                <div class="pl-2 font-text" id="service-four-text">
                     <li>Reactive Callouts</li>
                     <li>Fault Finding</li>
                     <li>Installation</li>
                     <li>Extension</li>
                 </div>
             </div>
-            <div class="col-4" id="service-five">
+            <div class="col-lg-4 col-md-6" id="service-five">
                 <h4 class="service">Reactive Call-Outs</h4>
-                <div class="pl-2" id="service-five-text">
+                <div class="pl-2 font-text" id="service-five-text">
                     <li>Gas Escape</li>
                     <li>Boiler Faults</li>
                     <li>Plumbing Faults</li>
                     <li>Heating Faults</li>
                 </div>
             </div>
-            <div class="col-4" id="service-six">
+            <div class="col-lg-4 col-md-6" id="service-six">
                 <h4 class="service">Survey</h4>
-                <div class="pl-2" id="service-six-text">
+                <div class="pl-2 font-text" id="service-six-text">
                     <li>Heating Systems</li>
                     <li>Plumbing Systems</li>
                     <li>Gas Pipework and Systems</li>
@@ -202,9 +233,9 @@
             <div class="col-12 strip"></div>
         </div>
     </div>
-    <div class="carousel" id="reviews">
+    <div class="carousel">
         <div class="carousel__item font text-center">
-            <p>"HP<sub>2</sub>G have the knowhow and knowledge to just get things done, we really don't know where we would be without them!"<br/>
+            <p class="review-text">"HP<sub>2</sub>G have the knowhow and knowledge to just get things done, we really don't know where we would be without them!"<br/>
                 <span class="names">Dave Moore (Premises Officer) - Longsands Academy</span><br/>
                 <span class="stars"><i class="fa-solid fa-star gold"></i>
                 <i class="fa-solid fa-star gold"></i>
@@ -215,7 +246,7 @@
                 </p>
         </div>
         <div class="carousel__item font text-center">
-            <p>"HP<sub>2</sub>G always go the extra mile, nothing is too much trouble."<br/>
+            <p class="review-text">"HP<sub>2</sub>G always go the extra mile, nothing is too much trouble."<br/>
             <span class="names">Simon Law (Operations Manager) - Bensons for Beds</span><br/>
             <span class="stars"><i class="fa-solid fa-star gold"></i>
             <i class="fa-solid fa-star gold"></i>
