Links updated in the navigation

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar-menu navbar-expand-lg navbar-light bg-light font" id="home">
         <img id="logo-top" src="assets/images/logo.png" alt="logo for the company" width="30">
-        <a class="navbar-brand ml-3" href="#home">
+        <a class="navbar-brand ml-3" href="index.html">
             <h1 id="header-title">HP<sub id="red-subscript" class="subsize">2</sub>g Ltd</h1>
             <h6 id="subheading">Commercial Heating Plumbing <span id="red-subscript">and</span> Gas Services</h6>
         </a>
